flexc++ (2.06.02)

  * Flexc++'s parser code was generated by bisonc++ V 6.00.00.

  * The build script now properly recognizes the 'strip' option

  * By default precompiled headers are used. The option -P (cf. log entry 
    'flexc++ (2.05.00)' below) is now opertational. 
    Be advised that using -P removes all existing .ih.gch files from the
    directory containing 'main.ih' and from all its immediate subdirectories.

  * Removed the --std=c++14 compiler option since that's the standard by now.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 18 May 2017 11:19:09 +0200

flexc++ (2.06.01)

  * Somehow the timestamps of scanner/lexer and scanner/lex.cc were incorrect,
    resulting in the build process attempting to rebuild lex.cc using flexc++
    (which at this point clearly doesn't exist).  The timestamps were fixed in
    this release.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 04 Mar 2017 09:17:18 +0100
  
flexc++ (2.06.00)

  * Added directive %startcondition-name specifying a non-default name for the
    StartCondition__ enum.

  * Updated the man-pages/manual.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 27 Feb 2017 12:33:58 +0100

flexc++ (2.05.00)

  * Precompiled headers are rebuilt when their .h or .ih file have changed.

  * Added option --own-parser (-P) showing the actions of flexc++'s own parser
    when parsing a lexer-specification file.

  * New parser, built by bisonc++ V5.00.00.

  * Repaired the faulty long-option definitions in main.cc, due to which
    long options were not properly recognized

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 13 Apr 2016 12:37:09 +0530

flexc++ (2.04.00)

  * Carlos Bril and Micha de Rijk detected a curious bug resulting in flexc++
    never recognizing its initial character range. E.g, these two rules
        a
        .|\n

    place \t into the 0th character range containing the characters \0 through
    \t. A scanner generated for these two rules echoed \t to cout as an