@@ -25,6 +25,7 @@
     // the compiler options to use.
 //#define CXXFLAGS            "--std=c++14 -Wall -O2 -g"
 #define CXXFLAGS            "-Wall -O2 -fdiagnostics-color=never"
+//  -Wunused-parameter
 
     // flags passed to the linker
 #define LDFLAGS             ""
