@@ -1,2 +1,2 @@
-#define VERSION "2.06.02"
-#define YEARS   "2008-2017"
+#define VERSION "2.06.03"
+#define YEARS   "2008-2018"
