@@ -291,13 +291,13 @@ void \@Base::updateFinals__()
 
     if (rf[0] != -1)        // update to the latest std rule
     {
-$insert 4 debug "latest std rule: " << rf[0] << ", len = " << len
+$insert 8 debug "latest std rule: " << rf[0] << ", len = " << len
         d_final.std = FinalData { as<size_t>(rf[0]), len };
     }
 
     if (rf[1] != -1)        // update to the latest bol rule
     {
-$insert 4 debug "latest BOL rule: " << rf[0] << ", len = " << len
+$insert 8 debug "latest BOL rule: " << rf[0] << ", len = " << len
         d_final.bol = FinalData { as<size_t>(rf[1]), len };
     }
 }
